# school-app

./: .gitignore  BUILD  Taskfile.yml  WORKSPACE  deps.bzl  go.mod  go.sum
api/openapi/: BUILD  academic-bundled.yaml  academic.yaml  attendance.yaml  meta.yaml  school-bundled.yaml  school.gen.go  student-bundled.yaml  student.yaml  teacher-bundled.yaml  teacher.yaml  user-bundled.yaml  user.yaml
infra/: compose.yml
src/administration/adapter/: BUILD.bazel  crdb.go  sqlc.yaml
src/administration/adapter/db/: BUILD.bazel  academic_year.sql.go  models.go
src/administration/adapter/query/: academic_year.sql
src/administration/app/: BUILD.bazel  academic_year.go
src/administration/domain/: BUILD.bazel  academic_year.go
src/administration/infra/db/migrations/: 20240803072636_create_table.up.sql  20240803074529_populate_attendance_type.up.sql  20240803074616_populate_academic_year.up.sql  BUILD
src/administration/port/: BUILD.bazel  err_mapper.go  http.go
src/cmd/school-api/: BUILD.bazel  main.go
src/cmd/school-api/config/: BUILD.bazel  config.go
src/pkg/auditable/: BUILD.bazel  auditable.go
src/pkg/enums/: BUILD.bazel  gender.go  religion.go
src/pkg/generr/: BUILD.bazel  err.go
src/pkg/psql/: BUILD.bazel  converter.go  pgerr.go  pgx_tracer.go  slogadapter.go
src/pkg/ptr/: BUILD.bazel  to_pointer.go
src/student/domain/: BUILD.bazel  student.go
src/student/infra/db/migrations/: 20240803070445_create_table.up.sql  BUILD
src/teacher/domain/: BUILD.bazel  teacher.go
src/teacher/infra/db/migrations/: 20240803015425_create_table.up.sql  BUILD
src/user/domain/: BUILD.bazel  err.go  session.go
src/user/infra/db/migrations/: 20240803032524_create_tables.up.sql  BUILD
