load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "port",
    srcs = [
        "err_mapper.go",
        "http.go",
    ],
    importpath = "github.com/kennykarnama/school-app/src/administration/port",
    visibility = ["//visibility:public"],
    deps = [
        "//api/openapi:generate",
        "//src/administration/app",
        "//src/pkg/generr",
        "//src/pkg/ptr",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_uuid//:uuid",
    ],
)
