load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "school-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/kennykarnama/school-app/src/cmd/school-api",
    visibility = ["//visibility:private"],
    deps = [
        "//api/openapi:generate",
        "//src/administration/adapter",
        "//src/administration/app",
        "//src/administration/port",
        "//src/cmd/school-api/config",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "school-api",
    embed = [":school-api_lib"],
    visibility = ["//visibility:public"],
)
