load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "psql",
    srcs = [
        "converter.go",
        "pgerr.go",
        "pgx_tracer.go",
        "slogadapter.go",
    ],
    importpath = "github.com/kennykarnama/school-app/src/pkg/psql",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgerrcode//:pgerrcode",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_jackc_pgx_v5//tracelog",
    ],
)
