load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = ["teacher.go"],
    importpath = "github.com/kennykarnama/school-app/src/teacher/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/auditable",
        "//src/pkg/enums",
    ],
)
