load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "academic_year.sql.go",
        "db.go",
        "models.go",
    ],
    importpath = "github.com/kennykarnama/school-app/src/administration/adapter/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)
