load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/kennykarnama/school-app/src/cmd/school-api/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kelseyhightower_envconfig//:envconfig"],
)
